Fix rogue panel collapse button

--- a/app/assets/stylesheets/table/table_panel/table_panel.css.scss
+++ b/app/assets/stylesheets/table/table_panel/table_panel.css.scss
@@ -29,6 +29,7 @@ $corner_radius: 6px;
   z-index:20;
 
   .collapse {
+    left: -44px;
     position: absolute;
     width: 43px;
     height: 43px;
